--- a/source-code-modeler/src/sourcecodemodeler/resources/css/main.css
+++ b/source-code-modeler/src/sourcecodemodeler/resources/css/main.css
@@ -1,13 +1,14 @@
 .root{
-    -fx-font-size: 16pt;
+    -fx-font-size: 14pt;
     -fx-font-family: "Courier New";
-    -fx-base: rgb(132, 145, 47);
-    -fx-background: rgb(225, 228, 203);
+    -fx-base:  #FFFFFF;
+    -fx-background: #FFFFFF;
 }
 
 HBox {
     -fx-alignment: center ;
     -fx-padding: 10 ;
+    -fx-spacing: 20;
 }
 
 .title{
@@ -15,10 +16,15 @@ HBox {
 	-fx-padding: 3 6 6 6;
 }
 
-.button{
-    -fx-text-fill: rgb(49, 89, 23);
-    -fx-border-color: rgb(49, 89, 23);
-    -fx-border-radius: 5;
-    -fx-padding: 3 6 6 6;
+.button {
+    -fx-text-fill: white;
+    -fx-font-family: "Arial Narrow";
+    -fx-font-weight: bold;
+    -fx-background-color: linear-gradient(#4169E1, #6495ED);
+    -fx-padding: 10;
+    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+}
+.button:hover {
+    -fx-background-color: linear-gradient(#2A5058, #61a2b1);
 }
 
